fixed pos of lab screen on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0rem;
+  padding-top: 5rem;
   text-align: center;
 }
 
